--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+<body>
+    <h1>Hadi Hamza protfolio</h1>
+    <h2>I'm a Web Developer</h2>
+    <hr />
+    <a href="./public/movie-ranking.html">
+        <H3>Movie ranking Project</H3>
+    </a>
+    <H3>The Best Moveies According to Hadi</H3>
+    <h4>My top 3 moveies of all-time</h4>
+    <H5>Spirted Away</H5>
+    <h6>This is my favourite anime. I love the beautiful images</h6>
+    <H5>Ex machina</H5>
+    <h6>Really cool sci-fi movie</h6>
+    <h5>Drive</h5>
+    <h6>Super beautiful film. Really artistic</h6>
+    <a href="./public/birthday-invite.html">
+        <h2>birthday-invite Project</h2>
+        <img src="./assets/images/birthday-invite.png" width="500" height="600" alt="">
+        <hr>
+        <h2>About me</h2>
+        <h2>Contact</h2>
+</body>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</html>
